<resources>
    <string name="app_name">FinanceTracker</string>
    <string name="income_nrs_0">Income\nRs. 0</string>
    <string name="expense_nrs_0">Expense\nRs. 0</string>
    <string name="budget_nrs_0">Budget\nRs. 0</string>
    <string name="title">Title</string>
    <string name="amount_rs">Amount (Rs)</string>
    <string name="category_e_g_food_bills">Category (e.g., Food, Bills)</string>
    <string name="date_yyyy_mm_dd">Date (YYYY-MM-DD)</string>
    <string name="save_transaction">Save Transaction</string>
    <string name="title1">Title</string>
    <string name="rs_0_00">Rs. 0.00</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="enter_monthly_budget_rs">Enter Monthly Budget (Rs)</string>
    <string name="save_budget">Save Budget</string>
    <string name="set_monthly_budget">Set Monthly Budget</string>
    <string name="view_spending_chart">View Spending Chart</string>
    <string name="export_transactions">Export Transactions</string>
    <string name="import_transactions">Import Transactions</string>
    <string name="spending_chart">Spending Chart</string>
    <string name="finance_tracker">Finance Tracker</string>
    <string name="get_started">Get Started</string>
    <string name="financetracker">FinanceTracker</string>
    <string name="moneymap">MoneyMap</string>
    <string name="manage_your_finances_with_ease_and_track_your_spending_habits">Manage your finances with ease and track your spending habits</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="back">Back</string>
    <string name="month">Month</string>
    <string name="quarter">Quarter</string>
    <string name="year">Year</string>
    <string name="spending_by_category">Spending by Category</string>
    <string name="income_vs_expense">Income vs Expense</string>
    <string name="_0_00">0.00</string>
    <string name="enter_transaction_title">Enter transaction title</string>
    <string name="today_april_21_2025">Today, April 21, 2025</string>
    <string name="payment_method">Payment Method</string>
    <string name="select_payment_method">Select Payment Method</string>
    <string name="notes_optional">Notes (Optional)</string>
    <string name="add_notes_about_this_transaction">Add notes about this transaction</string>
</resources>